[Release-1.5.0] move gc log to container log directory